# spiderwebai

./: .gitignore  LICENSE  README.md  dev.sh  sample.env
crawler/: .gitignore  .sample.env  Cargo.toml  README.md  deploy.sh
crawler/src/: main.rs  mods.rs  parse.rs  spider_core.rs  storage.rs  utils.rs  webhooks.rs
crawler/src/actions/: embedding.rs  meta_data.rs  mod.rs  update.rs
crawler/src/locales/: mod.rs  response_message.rs
crawler/src/openai_rust/: embeddings.rs  mod.rs
frontend/: .eslintrc.cjs  .gitignore  .prettierrc.json  .sample.env  README.md  astro.config.mjs  build-configure.mjs  package-lock.json  package.json  tailwind.config.cjs
frontend/public/: robots.txt
supabase/: config.toml  extensions.sql  seed.sql
supabase/migrations/: 20230822000019_create_credits_table.sql  20230822192813_create_websites.sql  20230822193125_add_policies_to_websites.sql  20230823140232_create_pages.sql  20230823171747_create_profiles.sql  20230823204819_create_pages_metadata.sql  20230823220237_add_credits_policies.sql  20230823221546_add_credits_balance_function.sql  20230825010334_storage_user_resource_manage_policy.sql  20230825130504_storage_resource.sql  20230825214545_create_pages_meta_update_policy.sql  20230828142605_create_user_embedded_question.sql  20230829113937_delete_user_auth_profile_trigger.sql  20230829130038_select_profiles_policies.sql  20230830152409_create_pages_policy.sql  20230830152441_create_questions_policy.sql  20230831001440_create_unique_pages_rows.sql  20230831004504_create_upsert_pages_rpc.sql  20230907142206_add_webhooks_table.sql  (+14 more)
(+127 files in other folders)
