[package]
name = "spider_service"
version = "0.0.1"
publish = false
authors = ["madeindjs <contact@rousseau-alexandre.fr>", "j-mendez <jeff@a11ywatch.com>"]
edition = "2021"
description = "Spider service crawler"
license = "MIT"
readme = "README.md"
repository = "https://github.com/a11ywatch/crawler"
keywords = ["crawler", "web-crawler", "spider", "web-indexer", "site-map-generator"]
categories = ["web-programming"]
include = ["src/*", "LICENSE", "README.md"]

[dependencies]
lambda_runtime = "0.8.2"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = { version = "1.0.105" }
spider = { version = "1.46.1", features = ["full_resources", "control", "time", "budget"] }
postgrest = "1.0"
dotenv = "0.15.0"
supabase-storage = "0.1.1"
anyhow = "1.0.70"
futures-util = "0.3.27"
lazy_static = "1.4.0"
tokio-stream = "0.1.14"
aws_sqs_types = "0.1.1"

[target.'cfg(all(not(target_os = "android"), not(target_os = "freebsd")))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
jemalloc-sys = { version = "0.5.0", optional = true }

[features]
default = ["spider/serde"]
jemalloc = ["jemallocator", "jemalloc-sys"]
chrome = ["spider/chrome_cpu"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bin]]
name = "spider_service"
path = "src/main.rs"

[[bin]]
name = "spider_service_chrome"
path = "src/main.rs"
